// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal | Update proposal content update proposal body with authorized iframe. 1`] = `
Object {
  "changeProposalContent": Object {
    "proposal": Object {
      "body": "<iframe class=\\"ql-video\\" frameborder=\\"0\\" src=\\"https://www.youtube.com/embed/qCNu_vJNLMQ?showinfo=0\\"></iframe>",
      "facebookUrl": null,
      "twitterUrl": null,
      "webPageUrl": null,
    },
  },
}
`;

exports[`Internal | Update proposal content update proposal body with unauthorized iframe. 1`] = `
Object {
  "changeProposalContent": Object {
    "proposal": Object {
      "body": "<iframe class=\\"ql-video\\" frameborder=\\"0\\"></iframe>",
      "facebookUrl": null,
      "twitterUrl": null,
      "webPageUrl": null,
    },
  },
}
`;

exports[`Internal | Update proposal content update proposal with rs 1`] = `
Object {
  "changeProposalContent": Object {
    "proposal": Object {
      "body": "TODO",
      "facebookUrl": "https://www.facebook.com/capco/",
      "twitterUrl": "https://twitter.com/karate_kid22",
      "webPageUrl": "http://cap-collectif.com",
    },
  },
}
`;
